assets/stylesheets/main.css
/* ... */
body {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

html {
    display: block;
    color: canvastext;
    line-height: 1.15;
    scroll-behavior: smooth;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
}

body,
html {
    height: 100%;
    scroll-behavior: smooth;
}

img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
    height: auto;
}

button {
    cursor: pointer;
}

ul,
ol {
    list-style: none;
}

/* Variables */
:root {
    --rythm-unit: 1.5em;
    --border-width: 8px;

    --primary-color: #400811;
    --toggled-color: #fefeff;
    --bg-tinted-color: #e2e8f0;
    --highlight-color: #FA4233;
    --highlight-color-pale: #FFEDEB;

    --bar-width: 42px;
    --bar-height: 2px;
    --hamburger-gap: 6px;
    --animation-timing: 433ms ease-in-out;
    --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
}

/* Typography */

html,
body {
    font-size: 18px;
}

body {
    line-height: var(--rythm-unit);
    font-family: "Lato", sans-serif;
    font-weight: 400;
    font-style: normal;
}

h1,
h2,
h3,
h4,
.cta,
.main-navigation a,
.dropdown,
.dropdown--button {
    line-height: calc(var(--rythm-unit) * 2);
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 900;
    font-style: normal;
}

h1,
h2,
h3,
h4 {
    line-height: 1.2;
}

.main-navigation a,
.dropdown--button {
    font-size: 1.2em;
}

@media (max-width: 600px) {

    h1,
    h2,
    h3 {
        line-height: 1.1em;
        padding-bottom: var(--rythm-unit);
    }
}

a {
    color: var(--primary-color);
    font-weight: bold;
    text-decoration-thickness: 2px;
}

/* Layout */

.page {
    display: grid;
    padding: calc(var(--rythm-unit)/2);
}

@media (min-width: 600px) {
    .page {
        padding: 0;
        grid-template-columns: 1fr min(1100px, 90vw) 1fr;
        grid-template-areas: ". content .";
    }
}

html {
    background-color: var(--toggled-color);
    color: var(--primary-color);
    height: 100%;
}

.main-content {
    grid-area: content;
    display: flex;
    flex-direction: column;
    gap: var(--rythm-unit);
    flex-wrap: wrap;
    margin-top: calc(var(--rythm-unit) * 2);
}

@media (min-width: 600px) {
    .main-navigation {
        border-top: 1px solid;
        border-bottom: 1px solid;
        border-color: var(--primary-color);
    }
}

.intrapage-links {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1em 0em;
    text-transform: lowercase;
    gap: 1em;
}

.navigation-link,
.dropdown {
    flex: 1;
    height: 4em;
    display: flex;
}

.navigation-link a {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
}

.intrapage-links .navigation-link a,
.dropdown--button {
    font-weight: 900;
}

.footer {
    margin: calc(var(--rythm-unit) * 3) 0;
}

p {
    margin-bottom: var(--rythm-unit);
}

@media (max-width: 600px) {

    .main-navigation,
    .intrapage-links {
        flex-direction: column;
        align-items: stretch;
        gap: 0;
        line-height: 1.6em;
    }

    .intrapage-links a {
        display: block;
    }
}

/* links */
.nav-logo {
    max-height: 2.5em;
    filter: drop-shadow(1px 2px 3px rgba(0, 0, 0, 0.2));
}

.footer-link,
.intrapage-links .navigation-link,
.usp,
.blog-post,
.event,
.company-member,
.dropdown {
    background: linear-gradient(to top, rgba(0, 0, 0, 0) 50%, var(--highlight-color) 50%);
    background-size: 100% 200%;
    background-position: bottom;
    transition: background-position 0.6s ease;
}

.footer-link:hover,
.intrapage-links li:hover,
.blog-post:hover,
.event:hover,
.company-member:hover,
.usp:hover {
    background-position: top;
}


.footer {
    display: flex;
    flex-wrap: wrap;
}

.legal-links,
.contact-links {
    flex: 1 1 50%;
}

.contact-links {
    text-align: right;
}

@media (max-width: 800px) {

    .legal-links,
    .contact-links {
        flex: 1 1 100%;
        text-align: left;
    }
}

.footer-link {
    line-height: 1.6em;
    letter-spacing: .1em;
}

.footer-link a {
    display: block;
}

.intrapage-links li a {
    line-height: 1.6em;
}

.footer-link a,
.intrapage-links a,
.dropdown--button {
    color: var(--white);
    transition: color 0.3s ease-out;
}

.footer-link a,
.intrapage-links a {
    font-weight: 400;
}

.intrapage-links .navigation-link a,
.blog-post a,
.company-member a,
.event a {
    text-decoration: none;
}

.intrapage-links .navigation-link a:hover,
.footer-link a:hover,
.dropdown:hover .dropdown--button {
    color: var(--primary-color);
}


.dropdown {
    position: relative;
}

.dropdown--button {
    background: none;
    border: none;
    text-transform: lowercase;
    cursor: pointer;
    width: 100%;
}

.dropdown--content {
    visibility: hidden;
    opacity: 0;
    transition: opacity .2s, visibility .2s;
    position: absolute;
    z-index: 1;
    text-align: right;
    top: 4em;
    right: 0;
    color: var(--toggled-color);
    background-color: var(--primary-color);
    padding: var(--rythm-unit);
    backdrop-filter: blur(4px);
}

.dropdown--content a {
    padding: 0 calc(var(--rythm-unit)/2);
    display: block;
    font-weight: 900;
}

.dropdown:hover .dropdown--content {
    visibility: visible;
    opacity: 1;
}

.dropdown:hover a {
    color: var(--toggled-color);
}

.dropdown a:hover {
    color: var(--primary-color);
    background-color: var(--toggled-color);
}

@media (max-width: 600px) {
    .intrapage-links {
        margin-top: var(--rythm-unit);
    }

    .dropdown--content {
        text-align: left;
        left: 0;
    }
}

/* hamburger menu */
@media (max-width: 600px) {
    .intrapage-links {
        display: none;
    }
}

@media (min-width: 600px) {
    .collapsed-navigation {
        display: none;
    }
}

/* homepage content */

.hero {
    line-height: 1.8em;
    font-size: 1.1em;
}
/* ... */

